--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.5",
+    "dotenv": "^16.4.5",
     "exceljs": "^4.4.0",
     "font-awesome": "^4.7.0",
     "js-cookie": "^3.0.5",
